fix: Allow the command to the otp pod to perform graph build